--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -6,31 +6,29 @@
     android:layout_height="match_parent"
     tools:viewBindingIgnore="true"
     tools:context=".PasswordResetActivity"
-    android:background="@color/gray_1">
+    android:background="@color/gray_1"
+    android:padding="24dp">
 
     <EditText
         android:id="@+id/pwdResetEmail_editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColorHint="@color/gray_3"
-        android:textColor="@color/white"
-        android:ems="10"
+        android:hint="Email ID"
         android:inputType="textEmailAddress"
-        android:hint="Email"
-        app:layout_constraintVertical_bias="0.2"
+        style="@style/user_det_style"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/pwdReset_button"
+        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send Reset Mail"
-        android:textColor="@color/lightBlue_FB"
+        android:textColor="@color/purple"
         android:backgroundTint="@color/white"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +36,12 @@
 
     <Button
         android:id="@+id/pwdResetSignIn_button"
+        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TRY SIGNING IN"
-        android:backgroundTint="@color/blue_FB"
-        app:layout_constraintVertical_bias="0.2"
+        android:backgroundTint="@color/purple"
+        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
