--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,6 +61,7 @@
         </com.google.android.material.appbar.MaterialToolbar>
 
         <RelativeLayout
+            android:id="@+id/homeFeed_relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
