--- a/app/src/main/res/layout/activity_create_social_profile.xml
+++ b/app/src/main/res/layout/activity_create_social_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateSocialProfileActivity">
+    tools:context=".activities.CreateSocialProfileActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayoutSocialProfile"
