--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/gray_1"
-    tools:context=".ExploreFragment">
+    tools:context=".fragments.ExploreFragment">
     <androidx.cardview.widget.CardView
         android:id="@+id/searchUser_cardView"
         android:layout_width="0dp"
