--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".UserProfileFragment"
+    tools:context=".fragments.UserProfileFragment"
     android:background="@color/gray_1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
