--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -8,8 +8,7 @@
     android:paddingTop="75dp"
     android:paddingLeft="50dp"
     android:paddingRight="50dp"
-    android:background="@color/gray_1"
-    tools:context=".activities.ContactActivity">
+    tools:context=".activities.ContactActivity" >
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/dev_profile_imageView"
@@ -18,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/dev_profile"
-        app:civ_border_color="@color/white"
+        app:civ_border_color="?android:attr/textColorPrimary"
         app:civ_border_width="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +26,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dev_profile_imageView">
@@ -87,7 +87,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MADE WITH LOVE ❣️"
-        android:textColor="@color/white"
+        android:textColor="?android:attr/textColorPrimary"
+        android:fontFamily="@font/anggota"
         android:textSize="22sp"
         android:layout_marginBottom="75dp"
         android:textAlignment="center"
