--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
     </style>
     <style name="logoStyle">
         <item name="android:textSize">30sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:fontFamily">@font/anggota</item>
     </style>
     <style name="roundedCorners" parent="">
@@ -44,8 +44,9 @@
     </style>
 
     <style name="dev_details">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/green_700</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:fontFamily">@font/anggota</item>
+        <item name="android:textColor">@color/purple</item>
         <item name="android:clickable">true</item>
     </style>
 </resources>
